--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -144,8 +144,8 @@ a{
     padding: 5px;
 }
 
-.mCSB_inside .mCSB_container{
-	margin-right: 20px !important
+.mCSB_inside > .mCSB_container {
+	margin-right: 15px;
 }
 
 .wordwrap {
