--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -543,13 +543,14 @@ td, th {
     border-left:solid #fff 1px;
     border-top:solid #fff 1px;
 
-    padding: 4px;
+    /*padding: 1px;*/
     color: #008fc7;
-    
+    vertical-align: top;
 }
 
 th{
 	text-align: center;
+	padding: 4px;
 }
 
 td{
@@ -894,7 +895,13 @@ p{
 	padding: 0; 
 	min-height: 70px; 
 	background: #f2fbff; 
-	border: 1px dashed #b6bcbf;
+	border: 1px dashed #b6bcbf;	
+}
+
+.ui-sortable-helper{
+	-ms-transform: rotate(-7deg); /* IE 9 */
+    -webkit-transform: rotate(-7deg); /* Chrome, Safari, Opera */
+    transform: rotate(-7deg);
 }
 
 .sortable_workflow .ui-state-highlight{
@@ -1394,11 +1401,31 @@ a.green{
 .ui-tabs .ui-tabs-panel {
 	padding: 0;
 }
-
-.ui-widget-header{
-	background:#008fc7;
-}
 */
+.ui-widget-header{
+	border: none !important;
+}
+
+.data, .weekend{
+	width: 30px !important;
+	height: 30px !important;
+	position: relative;
+	line-height: 30px;
+	text-align: center;
+}
+
+.weekend{
+	background: #ddd;
+}
+
+.evento{
+	left: 0px;
+	position: absolute;
+	background: red;
+	height: 30px;
+	z-index: 2;
+	color: #fff;
+}
 
 .select_holder{
 	width: 500px;
