--- a/public/css/common/dropzone.css
+++ b/public/css/common/dropzone.css
@@ -179,6 +179,7 @@
   margin-top: 10px;
   border: none !important;
   line-height: 40px;
+  z-index: 1;
 
   /*border: 2px solid rgba(0, 0, 0, 0.3);
   background: white;*/
