--- a/public/css/common/dropzone.css
+++ b/public/css/common/dropzone.css
@@ -177,9 +177,12 @@
 .dropzone {
   height: 105px;
   margin-top: 10px;
-  border: none !important;
+  /*border: none !important;*/
+  border:1px dotted #008fc7 !important;
   line-height: 40px;
   z-index: 1;
+  border-radius: 4px;
+
 
   /*border: 2px solid rgba(0, 0, 0, 0.3);
   background: white;*/
@@ -211,7 +214,7 @@
       .dropzone .dz-preview:hover .dz-details {
         opacity: 1; }
     .dropzone .dz-preview.dz-file-preview .dz-image {
-      border-radius: 20px;
+      /*border-radius: 20px;*/
       background: #999;
       background: linear-gradient(to bottom, #eee, #ddd); }
     .dropzone .dz-preview.dz-file-preview .dz-details {
@@ -243,7 +246,8 @@
       font-size: 13px;
       min-width: 100%;
       max-width: 100%;
-      padding: 2em 1em;
+      /*padding: 2em 1em;*/
+      padding: 20px 5px;
       text-align: center;
       color: rgba(0, 0, 0, 0.9);
       line-height: 150%; }
