--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -915,6 +915,9 @@ p{
 	border-left: 4px solid #008fc7;
 }
 
+.ui-datepicker {
+	z-index: 1000 !important;
+}
 /*
 .ui-datepicker{ background-color: #000; box-shadow:#999 0 5px 10px; color: #fff; }
 .ui-datepicker table{ border:0; background-color:#fff; border:1px solid #bbb; }
