--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -1604,8 +1604,8 @@ a.green{
 
 
 .object_finished{
-	background:#9ae266;
-	color:#000;
+	background: green;
+	color:#fff;
 }
 
 .object_late, .object_late a{
