--- a/public/css/admin/masterpage.css
+++ b/public/css/admin/masterpage.css
@@ -115,7 +115,7 @@ a{
 #esquerda{
     overflow:hidden;
     position: absolute;
-    width: 350px;
+    width: 300px;
     display: none;
     top:46px;
     bottom: 0;
@@ -131,7 +131,7 @@ a{
     display: none;
     top:46px;
     bottom: 0;
-    left: 517px;
+    left: 467px;
     right: 60px;
     /*width: 515px;*/
     padding: 5px 10px 5px 0;
@@ -941,7 +941,7 @@ p{
 .ui-datepicker .ui-datepicker-today{ background-color: #009f9f;}
 */
 
-#workflow_task, #sortable .ui-state-highlight, .sortable_workflow .ui-state-highlight, .sortable_tags .ui-state-highlight, .sortable_status .ui-state-highlight, .sortable_produtoras .ui-state-highlight{
+#sortable .ui-state-highlight, .sortable_workflow .ui-state-highlight, .sortable_tags .ui-state-highlight, .sortable_status .ui-state-highlight, .sortable_produtoras .ui-state-highlight{
 	margin: 5px 0; 
 	padding: 0; 
 	min-height: 70px; 
@@ -1336,10 +1336,16 @@ a.green{
 
 
 
-.list_faixa{
+.list_faixa, .list_faixa_workflow{
 	margin: 0 2px 2px 0;
 	padding: 4px 5px;
 	display: inline-block;
+	color: #fff;
+	/*line-height: 30px !important*/
+}
+
+.list_faixa_workflow{
+	display: block !important;
 	/*line-height: 30px !important*/
 }
 
