--- a/public/css/admin/login.css
+++ b/public/css/admin/login.css
@@ -1,17 +1,30 @@
+.round{
+    -o-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -khtml-border-radius: 4px;
+    border-radius: 4px;
+}
+
+#nav_login{
+	margin: 0 auto;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+
+}
+
 #login{
+	width: 250px;
 	height: 200px;
 	padding: 5px;
-    display: inline-block;
+	left: -125px;
+	top: -100px;
+	position: absolute;
+
 }
 
 
-#login dd, #login dt{
-	float:left;
-}
-
-#login label{
-	margin:10px;
-}
 
 #login .error{
 	display:block;
@@ -20,7 +33,8 @@
 #login input[type='text'], #login input[type='password'], #login input[type='submit']{
 	border:1px #CCC solid;
 	padding:5px;
-	margin-top: -5px;
+	margin: 5px;
+	width: 250px;
 }
 
 #login input[type='submit']{
